--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.3.3",
+    "nodemailer": "^6.9.3",
+    "otp-generator": "^4.0.1",
     "sequelize": "^6.32.0",
     "sequelize-cli": "^6.6.0",
     "uuid": "^9.0.0"
