--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,14 @@
 {
   "development": {
-    "username": "root",
-    "password": "kenmagic",
-    "database": "itss1",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "use_env_variable": "DB_URL",
+    "dialectOptions": {
+      "ssl": true
+    }
   },
   "test": {
-    "username": "root",
-    "password": null,
-    "database": "database_test",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "use_env_variable": "DB_URL"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "use_env_variable": "DB_URL"
   }
 }
