--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,6 @@
 {
   "development": {
-    "use_env_variable": "DB_URL",
-    "dialectOptions": {
-      "ssl": true
-    }
+    "use_env_variable": "DB_URL"
   },
   "test": {
     "use_env_variable": "DB_URL"
